src/objects/Survey_Question_Response__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_10__c</fullName>
        <description>The tenth option for a picklist/radio buttons.</description>
        <label>Option 10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1__c</fullName>
        <description>The first option for a picklist/radio buttons.</description>
        <label>Option 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_2__c</fullName>
        <description>The second option for a picklist/radio buttons.</description>
        <label>Option 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Buttons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiCheckbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>The response from the user.</description>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <label>Survey Response</label>
        <referenceTo>Survey_Response__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>SQR-{0000}</displayFormat>
        <label>Survey Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>